add to cart functionality with the help of Crinsane/LaravelShoppingcart

--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "cartalyst/stripe-laravel": "7.0.*",
+        "doctrine/dbal": "v2.4.2",
         "fideloper/proxy": "~3.3",
+        "gloudemans/shoppingcart": "^2.4",
+        "intervention/image": "^2.4",
+        "laravel/cashier": "~7.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-
-        "doctrine/dbal": "v2.4.2",
         "laravelcollective/html": "~5.0",
-        "intervention/image": "^2.4",
-        "cartalyst/stripe-laravel": "7.0.*",
-        "laravel/cashier":"~7.0",
-        "barryvdh/laravel-ide-helper": "^2.1",
         "nesbot/carbon": "^1.21",
         "stripe/stripe-php": "3.*"
     },
