--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+RE_CAP_SITE=6LfqtT4UAAAAAFhrHEoaYSYxff9-6Bl8UCTkCl_a
+RE_CAP_SECRET=6LfqtT4UAAAAALW8KIrYxfdO8_9aNq4JJY-5qGFE
