--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,10 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "cartalyst/stripe-laravel": "7.0.*",
         "doctrine/dbal": "v2.4.2",
+        "evercode1/trait-maker": "^1.0",
         "fideloper/proxy": "~3.3",
         "gloudemans/shoppingcart": "^2.4",
+        "google/recaptcha": "~1.1",
         "intervention/image": "^2.4",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.5.*",
