--- a/.env
+++ b/.env
@@ -25,8 +25,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=94dd6bde606b97
+MAIL_PASSWORD=9c79f24d0de430
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
