--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,15 @@
         "fideloper/proxy": "~3.3",
         "gloudemans/shoppingcart": "^2.4",
         "google/recaptcha": "~1.1",
+        "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.4",
         "laravel/cashier": "~7.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "~5.0",
         "nesbot/carbon": "^1.21",
-        "stripe/stripe-php": "3.*"
+        "stripe/stripe-php": "3.*",
+        "maddhatter/laravel-fullcalendar": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
